--- a/app/views/prof_mailer/internship_email.html.haml
+++ b/app/views/prof_mailer/internship_email.html.haml
@@ -18,7 +18,7 @@
   I am interested in doing a project under your able guidance as a part of my training during May-July 2012.
 %p
   Kindly have a look at my resume at 
-  = "here" , "http://sricharan-resume.heroku.com/" 
+  = link_to  "here" , "http://sricharan-resume.heroku.com/" 
 %p
   Waiting for your reply
 %p
