--- a/app/views/prof_mailer/internship_email.html.haml
+++ b/app/views/prof_mailer/internship_email.html.haml
@@ -17,13 +17,14 @@
 %p
   I am interested in doing a project under your able guidance as a part of my training during May-July 2012.
 %p
-  Kindly have a look at my resume at 
-  = link_to  "here" , "http://sricharan-resume.heroku.com/" 
+  Kindly have a look at my resume  
+  = link_to  "here" , "http://sricharan-resume.heroku.com/" , :target => "_blank"
 %p
   Waiting for your reply
 %p
   Warm Regards
-%p 
+%p
+  %br 
   Sricharan Sunder
   %br
   Junior Year Student
