changes to cover letter

--- a/app/views/prof_mailer/internship_email.html.haml
+++ b/app/views/prof_mailer/internship_email.html.haml
@@ -1,28 +1,28 @@
 %p
+  MW-210, Meghnad Saha Hall
+  %br
+  IIT Kharagpur, West Bengal
+  %br
+  India - 721302
+%p
   Dear Dr.
 %p
-  I am an undergraduate student in the field of Metallurgical and Materials Engineering at INDIAN INSTITUTE OF
-  TECHNOLOGY KHARAGPUR, one of the premier and most reputed institutes of India. I am currently in my 3rd year.
-%p
-  I visited your online profile and read an abstract of your publication "
+  To introduce myself, I am a 3rd year student of the Department of Metallurgical and Materials Engineering at Indian Institute of Technology, Kharagpur, India's premier research organisation, looking at the possibility of obtaining a position for Summer Internship, gelling with my academic background. I am aware of the superior quality of research at your institute and having read several of your recent publications (like "
   %b
-    = @contact.publication
-  " and found it very interesting as im very interested in solidification, powder metallurgy, deformation behaviour of materials, mechanical working, phase transformation and heat treatment. It would really be an honour to work under you as i would get to learn a lot in this field. Infact im doing a project right now to 
-  %b
-    Determine the effect of strain on the pearlite content in steel.
-
-%p
-  Sir, I have a bright academic record.I have done my schooling from C.B.S.E.(Central Board of Secondary Education) which is the most reputed education board in India, securing 95.4% in Secondary School Exam-2007 and 85.8% in Senior Secondary Exam -2009. I have cleared JEE 2009, organised by IITs and getting a score of 99% percentile,in which more than 400,000 candidates appeared.. At graduate level, my current (Cumulative Grade Point Average) C.G.P.A. is 7.22 (*on scale of 10). I have an aptitude for programming languages and i know my way around a lot of softwares.
-
-%p
-  I am interested in doing a project under your able guidance as a part of my training during May-July 2012.
-%p
-  Kindly have a look at my resume  
+    = @contact.publication 
+  "),I have decided that your current research work matches my interests to a remarkable degree.
+%p  
   = link_to  "here" , "http://sricharan-resume.heroku.com/" , :target => "_blank"
+  Please have a look at my resume
+  = link_to  "here." , "http://sricharan-resume.heroku.com/" , :target => "_blank"
+  A number of details about my profile appear in the same. Yet no resume can comprehensively spell out everything.If my profile, prima facie matches with your requirements for a Summer Intern, please revert back, so that I could furnish any more relevant information.May I please also enquire whether some funding may be available for this internship in the form of a grant or scholarship?
 %p
-  Waiting for your reply
+  Looking forward to a reply in the affirmative.
+  If selected by your consideration I promise to complete my assignments with utmost sincerity.
 %p
-  Warm Regards
+  Thanking you,
+%p
+  Yours sincerely,
 %p
   %br 
   Sricharan Sunder
