name field added :)

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,6 +13,11 @@
   
         %tr
           %td
+            %b Name of the prof
+          %td
+            = contact.text_field :name, :size => 25
+        %tr
+          %td
             %b Publication
           %td
             = contact.text_field :publication, :size => 25
