--- a/app/views/prof_mailer/internship_email.html.haml
+++ b/app/views/prof_mailer/internship_email.html.haml
@@ -5,7 +5,8 @@
   %br
   India - 721302
 %p
-  Dear Dr.
+  Dr. 
+  = @contact.name
 %p
   To introduce myself, I am a 3rd year student of the Department of Metallurgical and Materials Engineering at Indian Institute of Technology, Kharagpur, India's premier research organisation, looking at the possibility of obtaining a position for Summer Internship, gelling with my academic background. I am aware of the superior quality of research at your institute and having read several of your recent publications (like "
   %b
@@ -14,7 +15,7 @@
 %p  
   Please have a look at my resume
   = link_to  "here." , "http://sricharan-resume.heroku.com/" , :target => "_blank"
-  A number of details about my profile appear in the same. Yet no resume can comprehensively spell out everything.If my profile, prima facie matches with your requirements for a Summer Intern, please revert back, so that I could furnish any more relevant information.May I please also enquire whether some funding may be available for this internship in the form of a grant or scholarship?
+  A number of details about my profile appear in the same. Yet no resume can comprehensively spell out everything.If my profile, prima facie matches with your requirements for a Summer Intern, please revert back, so that I could furnish any more relevant information.
 %p
   Looking forward to a reply in the affirmative.
   If selected by your consideration I promise to complete my assignments with utmost sincerity.
